// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntrySidebar/TranslationWidget when single locale mode is off should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      extraClassNames="entity-sidebar__select"
      hasError={false}
      isDisabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      testId="cf-ui-select"
      value="multiple"
      width="auto"
    >
      <Option
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationWidgetPills
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    locales={
      Array [
        Object {
          "code": "en-US",
          "default": true,
          "name": "English (United States)",
        },
        Object {
          "code": "ru",
          "default": false,
          "name": "Russian",
        },
      ]
    }
    onChange={[MockFunction]}
    onLocaleDeactivation={[MockFunction]}
  />
</EntrySidebarWidget>
`;

exports[`EntrySidebar/TranslationWidget when single locale mode is on should match snapshot 1`] = `
<EntrySidebarWidget
  headerNode={
    <Select
      extraClassNames="entity-sidebar__select"
      hasError={false}
      isDisabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      required={false}
      testId="cf-ui-select"
      value="single"
      width="auto"
    >
      <Option
        value="multiple"
      >
        Multiple locales
      </Option>
      <Option
        value="single"
      >
        Single locale
      </Option>
    </Select>
  }
  testId="sidebar-translation-widget"
  title="Translation"
>
  <TranslationDropdownWidget
    emitter={
      Object {
        "emit": [MockFunction],
      }
    }
    locales={
      Array [
        Object {
          "code": "en-US",
          "default": true,
          "name": "English (United States)",
        },
        Object {
          "code": "ru",
          "default": false,
          "name": "Russian",
        },
      ]
    }
    onChange={[MockFunction]}
    onLocaleDeactivation={[MockFunction]}
  />
</EntrySidebarWidget>
`;
